--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "react": "15.4.2",
     "react-native": "0.41.2",
-    "react-native-button-component": "^0.1.13",
+    "react-native-button": "^1.7.1",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0"
   },
